syntax = "proto3";

package order;

service OrderService {
  rpc GetOrders (GetOrdersRequest) returns (GetOrdersResponse);
  rpc GetOrderDetail(GetOrderDetailRequest) returns (GetOrderDetailResponse);
}

message GetOrdersRequest {
  int32 page = 1;
  int32 limit = 2;
  string itemId = 3;
  string status = 4;
}

message GetOrderDetailRequest {
  string orderId = 1;
}

message GetOrderDetailResponse {
  Order order = 1;
}

message Order {
  int32 id = 1;
  string itemId = 2;
  int32 quantity = 3;
  string status = 4;
}

message GetOrdersResponse {
  repeated Order orders = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
}
